--- a/index.html
+++ b/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <nav class="nav">
+        <div class="nav_first">
+          <div class="figure">
+            <div class="smoll"></div>
+            <div class="smoll2"></div>
+          </div>
+          <div class="nav_links">
+            <a href="">About</a>
+            <a href="">Help</a>
+            <a href="">Features</a>
+            <a href="">Signup</a>
+          </div>
+        </div>
+        <button class="demo_btn">Request Demo</button>
+      </nav>
+      <div class="first">
+        <div class="first_left">
+          <h1>Save your data storage here.</h1>
+          <p>
+            Data Warehouse is a data storage area that has been tested for
+            security, so you can store your data here safely but not be afraid
+            of being stolen by others.
+          </p>
+          <button class="first_btn">Learn more</button>
+        </div>
+        <div class="first_right"></div>
+      </div>
+      <div class="second">
+        <div class="second_left"></div>
+        <div class="second_right">
+          <h2>We are a high-level data storage bank</h2>
+          <p>
+            The place to store various data that you can access at any time
+            through the internet and where you can carry it. This very flexible
+            storage area has a high level of security. To enter into your own
+            data you must enter the password that you created when you
+            registered in this Data Warehouse.
+          </p>
+        </div>
+      </div>
+      <div class="third"></div>
+      <div class="fourth"></div>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
