--- a/index.html
+++ b/index.html
@@ -50,7 +50,48 @@
           </p>
         </div>
       </div>
-      <div class="third"></div>
+      <div class="third">
+        <div class="third_main">
+          <h3>Features</h3>
+          <p>
+            Some of the features and advantages that we provide for those of you
+            who store data in this Data Warehouse.
+          </p>
+        </div>
+        <div class="third_cont">
+          <div class="n">
+            <div class="img1"></div>
+            <h4>Data</h4>
+            <p>Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+           
+            <a href="" class="third_btn">Learn more</a>
+          </div>
+          <div class="n">
+            <div class="img2"></div>
+            <h4>24 Hours Access</h4>
+            <p>Access is given 24 hours a full morning to night and
+            meet again in the morning, giving you comfort when
+            you need data when urgent.</p>
+            <a href="" class="third_btn">Learn more</a>
+          </div>
+          <div class="n">
+            <div class="img3"></div>
+            <h4>Print Out</h4>
+            <p>Print out service gives you convenience if someday
+            you need print data, just edit it all and just print it.</p>
+            <a href="" class="third_btn">Learn more</a>
+          </div>
+          <div class="n">
+            <div class="img4"></div>
+            <h4>Security Code</h4>
+            <p>Data Security is one of our best facilities. Allows for your files
+            to be safer. The file can be secured with a code or password that 
+            you created, so only you can open the file.</p>
+            <a href="" class="third_btn">Learn more</a>
+          </div>
+          </div>
+        </div>
+      </div>
       <div class="fourth"></div>
       <footer class="footer"></footer>
     </div>
