--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="reset.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div class="main">
       <nav class="nav">
@@ -23,7 +28,9 @@
             <a href="">Signup</a>
           </div>
         </div>
-        <button class="demo_btn">Request Demo</button>
+        <button class="demo_btn">
+          Request Demo <i class="bi bi-arrow-right"></i>
+        </button>
       </nav>
       <div class="first">
         <div class="first_left">
@@ -68,7 +75,9 @@
               effectively saving time.
             </p>
 
-            <a href="" class="third_btn">Learn more</a>
+            <a href="" class="third_btn"
+              >Learn more <i class="bi bi-arrow-right"></i
+            ></a>
           </div>
           <div class="n">
             <div class="img2"></div>
@@ -77,7 +86,9 @@
               Access is given 24 hours a full morning to night and meet again in
               the morning, giving you comfort when you need data when urgent.
             </p>
-            <a href="" class="third_btn">Learn more</a>
+            <a href="" class="third_btn"
+              >Learn more <i class="bi bi-arrow-right"></i
+            ></a>
           </div>
           <div class="n">
             <div class="img3"></div>
@@ -86,7 +97,9 @@
               Print out service gives you convenience if someday you need print
               data, just edit it all and just print it.
             </p>
-            <a href="" class="third_btn">Learn more</a>
+            <a href="" class="third_btn"
+              >Learn more <i class="bi bi-arrow-right"></i
+            ></a>
           </div>
           <div class="n">
             <div class="img4"></div>
@@ -96,7 +109,9 @@
               to be safer. The file can be secured with a code or password that
               you created, so only you can open the file.
             </p>
-            <a href="" class="third_btn">Learn more</a>
+            <a href="" class="third_btn"
+              >Learn more <i class="bi bi-arrow-right"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -116,32 +131,29 @@
                 </span>
               </div>
             </div>
-            
-              <div class="person_2">
-                <div class="foto_2"></div>
-                <div class="person_info">
-                  <p>Jeny Doe</p>
-                  <a href="">UX Engineer</a>
-                  <span>
-                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                    viverra enim erat tortor
-                  </span>
-                </div>
-                <div class="person_2_shadow"></div>
+            <div class="person_2">
+              <div class="foto_2"></div>
+              <div class="person_info">
+                <p>Jeny Doe</p>
+                <a href="">UX Engineer</a>
+                <span>
+                  Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                  viverra enim erat tortor
+                </span>
               </div>
-            
-            <div class="person_3_shadow">
-              <div class="person_3">
-                <div class="foto_3"></div>
-                <div class="person_info">
-                  <p>William</p>
-                  <a href="">Web Designer</a>
-                  <span>
-                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                    viverra enim erat tortor
-                  </span>
-                </div>
+              <div class="person_2_shadow"></div>
+            </div>
+            <div class="person_3">
+              <div class="foto_3"></div>
+              <div class="person_info">
+                <p>William</p>
+                <a href="">Web Designer</a>
+                <span>
+                  Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                  viverra enim erat tortor
+                </span>
               </div>
+              <div class="person_3_shadow"></div>
             </div>
           </div>
           <div class="fourth_menu">
@@ -152,13 +164,80 @@
               <div></div>
             </div>
             <div class="arrows">
-              <div class="right"></div>
-              <div class="left"></div>
+              <div class="left"><i class="bi bi-arrow-left"></i></div>
+              <div class="right"><i class="bi bi-arrow-right"></i></div>
             </div>
           </div>
         </div>
       </div>
-      <footer class="footer"></footer>
+      <em class="line"></em>
+      <footer class="footer">
+        <div class="footer_1">
+          <div class="footer_1_left">
+            <h6>Try for free!</h6>
+            <p>Get limited 1 week free try our features!</p>
+          </div>
+          <div class="footer_1_right">
+            <button class="footer_1_btn">Learn more</button>
+            <button class="demo_btn">
+              Request Demo <i class="bi bi-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        <div class="footer_2">
+          <div class="footer_2_1">
+            <div class="footer_2_1_1">
+              <div class="figure">
+                <div class="smoll"></div>
+                <div class="smoll2"></div>
+              </div>
+              <p>DataWarehouse</p>
+            </div>
+            <div class="footer_2_1_2">
+              <p>Warehouse Society, 234 Bahagia Ave Street PRBW 29281</p>
+              <p>info@warehouse.project 1-232-3434 (Main)</p>
+            </div>
+          </div>
+          <div class="footer_2_2">
+            <div class="footer_2_2_1"><p>About</p></div>
+            <ul>
+              <li class="li"><a href="">Profile</a></li>
+              <li class="li"><a href="">Features</a></li>
+              <li class="li"><a href="">Careers</a></li>
+              <li class="li"><a href="">DW News</a></li>
+            </ul>
+          </div>
+          <div class="footer_2_3">
+            <div class="footer_2_3_1"><p>Help</p></div>
+            <ul>
+              <li class="li"><a href="">Support</a></li>
+              <li class="li"><a href="">Sign up</a></li>
+              <li class="li"><a href="">Guide</a></li>
+              <li class="li"><a href="">Reports</a></li>
+              <li class="li"><a href="">Q&A</a></li>
+            </ul>
+          </div>
+          <div class="footer_2_4">
+            <div class="footer_2_4_1"><p>Social Media</p></div>
+            <div class="footer_2_4_2">
+              <i class="bi bi-facebook"></i>
+              <i class="bi bi-twitter"></i>
+              <i class="bi bi-instagram"></i>
+            </div>
+          </div>
+        </div>
+        <div class="footer_3">
+          <div class="footer_3_1">
+            <p>
+              © Datawarehouse™, 2020. All rights reserved. Company Registration
+              Number: 21479524.
+            </p>
+          </div>
+          <div class="footer_3_2">
+            <i class="bi bi-chat-right-dots"></i>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
