--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/818bc07dab.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -34,143 +42,178 @@
       </nav>
       <div class="first">
         <div class="first_left">
-          <h1>Save your data storage here.</h1>
-          <p>
-            Data Warehouse is a data storage area that has been tested for
-            security, so you can store your data here safely but not be afraid
-            of being stolen by others.
-          </p>
-          <button class="first_btn">Learn more</button>
+          <div><h1>Save your data storage here.</h1></div>
+          <div>
+            <p>
+              Data Warehouse is a data storage area that has been tested for
+              security, so you can store your data here safely but not be afraid
+              of being stolen by others.
+            </p>
+          </div>
+          <div><button class="first_btn">Learn more</button></div>
         </div>
         <div class="first_right"></div>
       </div>
       <div class="second">
         <div class="second_left"></div>
         <div class="second_right">
-          <h2>We are a high-level data storage bank</h2>
-          <p>
-            The place to store various data that you can access at any time
-            through the internet and where you can carry it. This very flexible
-            storage area has a high level of security. To enter into your own
-            data you must enter the password that you created when you
-            registered in this Data Warehouse.
-          </p>
+          <div><h2>We are a high-level data storage bank</h2></div>
+          <div>
+            <p>
+              The place to store various data that you can access at any time
+              through the internet and where you can carry it. This very
+              flexible storage area has a high level of security. To enter into
+              your own data you must enter the password that you created when
+              you registered in this Data Warehouse.
+            </p>
+          </div>
         </div>
       </div>
       <div class="third">
         <div class="third_main">
-          <h3>Features</h3>
-          <p>
-            Some of the features and advantages that we provide for those of you
-            who store data in this Data Warehouse.
-          </p>
+          <div><h3>Features</h3></div>
+          <div>
+            <p>
+              Some of the features and advantages that we provide for those of
+              you who store data in this Data Warehouse.
+            </p>
+          </div>
         </div>
         <div class="third_cont">
           <div class="n">
             <div class="img1"></div>
-            <h4>Data</h4>
-            <p>
-              Don’t worry if your data is very large, the Data Warehoue provides
-              a search engine, which is useful for making it easier to find data
-              effectively saving time.
-            </p>
-
-            <a href="" class="third_btn"
-              >Learn more <i class="bi bi-arrow-right"></i
-            ></a>
+            <div class="third_info">
+              <div><h4>Search Data</h4></div>
+              <div>
+                <p>
+                  Don’t worry if your data is very large, the Data Warehoue
+                  provides a search engine, which is useful for making it easier
+                  to find data effectively saving time.
+                </p>
+              </div>
+              <div>
+                <a href="" class="third_btn">Learn more </a>
+                <i class="bi bi-arrow-right"></i>
+              </div>
+            </div>
           </div>
           <div class="n">
             <div class="img2"></div>
-            <h4>24 Hours Access</h4>
-            <p>
-              Access is given 24 hours a full morning to night and meet again in
-              the morning, giving you comfort when you need data when urgent.
-            </p>
-            <a href="" class="third_btn"
-              >Learn more <i class="bi bi-arrow-right"></i
-            ></a>
+            <div class="third_info">
+              <div><h4>24 Hours Access</h4></div>
+              <div>
+                <p>
+                  Access is given 24 hours a full morning to night and meet
+                  again in the morning, giving you comfort when you need data
+                  when urgent.
+                </p>
+              </div>
+              <div>
+                <a href="" class="third_btn"
+                  >Learn more <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="n">
             <div class="img3"></div>
-            <h4>Print Out</h4>
-            <p>
-              Print out service gives you convenience if someday you need print
-              data, just edit it all and just print it.
-            </p>
-            <a href="" class="third_btn"
-              >Learn more <i class="bi bi-arrow-right"></i
-            ></a>
+            <div class="third_info">
+              <div><h4>Print Out</h4></div>
+              <div>
+                <p>
+                  Print out service gives you convenience if someday you need
+                  print data, just edit it all and just print it.
+                </p>
+              </div>
+              <div>
+                <a href="" class="third_btn"
+                  >Learn more <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="n">
             <div class="img4"></div>
-            <h4>Security Code</h4>
-            <p>
-              Data Security is one of our best facilities. Allows for your files
-              to be safer. The file can be secured with a code or password that
-              you created, so only you can open the file.
-            </p>
-            <a href="" class="third_btn"
-              >Learn more <i class="bi bi-arrow-right"></i
-            ></a>
+            <div class="third_info">
+              <div><h4>Security Code</h4></div>
+              <div>
+                <p>
+                  Data Security is one of our best facilities. Allows for your
+                  files to be safer. The file can be secured with a code or
+                  password that you created, so only you can open the file.
+                </p>
+              </div>
+              <div>
+                <a href="" class="third_btn"
+                  >Learn more <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="fourth">
         <div class="fourth_main">
-          <h5 class="fourth_h">Testimonials</h5>
+          <div><h5 class="fourth_h">Testimonials</h5></div>
           <div class="fourth_person">
             <div class="person_1">
               <div class="foto_1"></div>
               <div class="person_info">
-                <p>John Fang</p>
-                <a href="">wordfaang.com</a>
-                <span
-                  >Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                  viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
-                  aenean nam laoreet nulla.
-                </span>
+                <div><p>John Fang</p></div>
+                <div><a href="">wordfaang.com</a></div>
+                <div>
+                  <span
+                    >Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor ultricies massa turpis. Arcu
+                    pulvinar aenean nam laoreet nulla.
+                  </span>
+                </div>
               </div>
             </div>
             <div class="person_2">
               <div class="foto_2"></div>
               <div class="person_info">
-                <p>Jeny Doe</p>
-                <a href="">UX Engineer</a>
-                <span>
-                  Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                  viverra enim erat tortor
-                </span>
+                <div><p>Jeny Doe</p></div>
+                <div><a href="">UX Engineer</a></div>
+                <div>
+                  <span>
+                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor
+                  </span>
+                </div>
               </div>
               <div class="person_2_shadow"></div>
             </div>
             <div class="person_3">
               <div class="foto_3"></div>
               <div class="person_info">
-                <p>William</p>
-                <a href="">Web Designer</a>
-                <span>
-                  Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                  viverra enim erat tortor
-                </span>
+                <div><p>William</p></div>
+                <div><a href="">Web Designer</a></div>
+                <div>
+                  <span>
+                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor
+                  </span>
+                </div>
               </div>
               <div class="person_3_shadow"></div>
             </div>
           </div>
           <div class="fourth_menu">
             <div class="dots">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
+              <div class="big_circle"></div>
+              <div class="white_circle"></div>
+              <div class="white_circle"></div>
+              <div class="white_circle"></div>
             </div>
             <div class="arrows">
               <div class="left"><i class="bi bi-arrow-left"></i></div>
-              <div class="right"><i class="bi bi-arrow-right"></i></div>
+              <div class="right"><i class="bi bi-arrow-right-short"></i></div>
             </div>
           </div>
         </div>
       </div>
-      <em class="line"></em>
+      <div class="line"><em class="line"></em></div>
       <footer class="footer">
         <div class="footer_1">
           <div class="footer_1_left">
@@ -191,38 +234,44 @@
                 <div class="smoll"></div>
                 <div class="smoll2"></div>
               </div>
-              <p>DataWarehouse</p>
+              <div><p>DataWarehouse</p></div>
             </div>
             <div class="footer_2_1_2">
-              <p>Warehouse Society, 234 Bahagia Ave Street PRBW 29281</p>
-              <p>info@warehouse.project 1-232-3434 (Main)</p>
+              <div>
+                <p>Warehouse Society, 234 Bahagia Ave Street PRBW 29281</p>
+              </div>
+              <div><p>info@warehouse.project 1-232-3434 (Main)</p></div>
             </div>
           </div>
           <div class="footer_2_2">
             <div class="footer_2_2_1"><p>About</p></div>
-            <ul>
-              <li class="li"><a href="">Profile</a></li>
-              <li class="li"><a href="">Features</a></li>
-              <li class="li"><a href="">Careers</a></li>
-              <li class="li"><a href="">DW News</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li class="li"><a href="">Profile</a></li>
+                <li class="li"><a href="">Features</a></li>
+                <li class="li"><a href="">Careers</a></li>
+                <li class="li"><a href="">DW News</a></li>
+              </ul>
+            </div>
           </div>
           <div class="footer_2_3">
             <div class="footer_2_3_1"><p>Help</p></div>
-            <ul>
-              <li class="li"><a href="">Support</a></li>
-              <li class="li"><a href="">Sign up</a></li>
-              <li class="li"><a href="">Guide</a></li>
-              <li class="li"><a href="">Reports</a></li>
-              <li class="li"><a href="">Q&A</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li class="li"><a href="">Support</a></li>
+                <li class="li"><a href="">Sign up</a></li>
+                <li class="li"><a href="">Guide</a></li>
+                <li class="li"><a href="">Reports</a></li>
+                <li class="li"><a href="">Q&A</a></li>
+              </ul>
+            </div>
           </div>
           <div class="footer_2_4">
             <div class="footer_2_4_1"><p>Social Media</p></div>
             <div class="footer_2_4_2">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-instagram"></i>
+              <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+              <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
             </div>
           </div>
         </div>
@@ -234,7 +283,7 @@
             </p>
           </div>
           <div class="footer_3_2">
-            <i class="bi bi-chat-right-dots"></i>
+            <div class="icon"><i class="fa-solid fa-comment-dots"></i></div>
           </div>
         </div>
       </footer>
