--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </p>
                 </div>
                 <div class="third_btn">
-                  <a href="" class="third_btn">Learn more</a>
+                  <a href="">Learn more</a>
                   <i class="bi bi-arrow-right"></i>
                 </div>
               </div>
@@ -123,9 +123,8 @@
                   </p>
                 </div>
                 <div class="third_btn">
-                  <a href="" class="third_btn"
-                    >Learn more <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <a href="">Learn more</a>
+                  <i class="bi bi-arrow-right"></i>
                 </div>
               </div>
             </div>
@@ -140,9 +139,8 @@
                   </p>
                 </div>
                 <div class="third_btn">
-                  <a href="" class="third_btn"
-                    >Learn more <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <a href="">Learn more</a>
+                  <i class="bi bi-arrow-right"></i>
                 </div>
               </div>
             </div>
@@ -158,9 +156,8 @@
                   </p>
                 </div>
                 <div class="third_btn">
-                  <a href="" class="third_btn"
-                    >Learn more <i class="bi bi-arrow-right"></i>
-                  </a>
+                  <a href="">Learn more</a>
+                  <i class="bi bi-arrow-right"></i>
                 </div>
               </div>
             </div>
@@ -168,72 +165,73 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="fourth">
-          <div class="fourth_main">
-            <div><h5 class="fourth_h">Testimonials</h5></div>
-            <div class="fourth_person">
-              <div class="person_1">
-                <div class="foto_1"></div>
-                <div class="person_info">
-                  <div><p>John Fang</p></div>
-                  <div><a href="">wordfaang.com</a></div>
-                  <div>
-                    <span
-                      >Suspendisse ultrices at diam lectus nullam. Nisl,
-                      sagittis viverra enim erat tortor ultricies massa turpis.
-                      Arcu pulvinar aenean nam laoreet nulla.
-                    </span>
-                  </div>
+      <div class="fourth">
+        <div class="container">
+          <!-- <div class="fourth_main"> -->
+          <div class="fourth_h"><h5>Testimonials</h5></div>
+          <div class="fourth_person">
+            <div class="person_1">
+              <div class="foto_1"></div>
+              <div class="person_info">
+                <div><p>John Fang</p></div>
+                <div><a href="">wordfaang.com</a></div>
+                <div>
+                  <span
+                    >Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor ultricies massa turpis. Arcu
+                    pulvinar aenean nam laoreet nulla.
+                  </span>
                 </div>
-              </div>
-              <div class="person_2">
-                <div class="foto_2"></div>
-                <div class="person_info">
-                  <div><p>Jeny Doe</p></div>
-                  <div><a href="">UX Engineer</a></div>
-                  <div>
-                    <span>
-                      Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                      viverra enim erat tortor
-                    </span>
-                  </div>
-                </div>
-                <div class="person_2_shadow"></div>
-              </div>
-              <div class="person_3">
-                <div class="foto_3"></div>
-                <div class="person_info">
-                  <div><p>William</p></div>
-                  <div><a href="">Web Designer</a></div>
-                  <div>
-                    <span>
-                      Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
-                      viverra enim erat tortor
-                    </span>
-                  </div>
-                </div>
-                <div class="person_3_shadow"></div>
               </div>
             </div>
-            <div class="fourth_menu">
-              <div class="dots">
-                <div class="big_circle"></div>
-                <div class="white_circle"></div>
-                <div class="white_circle"></div>
-                <div class="white_circle"></div>
+            <div class="person_2">
+              <div class="foto_2"></div>
+              <div class="person_info">
+                <div><p>Jeny Doe</p></div>
+                <div><a href="">UX Engineer</a></div>
+                <div>
+                  <span>
+                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor
+                  </span>
+                </div>
               </div>
-              <div class="arrows">
-                <div class="left"><i class="bi bi-arrow-left"></i></div>
-                <div class="right"><i class="bi bi-arrow-right-short"></i></div>
+              <div class="person_2_shadow"></div>
+            </div>
+            <div class="person_3">
+              <div class="foto_3"></div>
+              <div class="person_info">
+                <div><p>William</p></div>
+                <div><a href="">Web Designer</a></div>
+                <div>
+                  <span>
+                    Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                    viverra enim erat tortor
+                  </span>
+                </div>
               </div>
+              <div class="person_3_shadow"></div>
             </div>
           </div>
+          <div class="fourth_menu">
+            <div class="dots">
+              <div class="big_circle"></div>
+              <div class="white_circle"></div>
+              <div class="white_circle"></div>
+              <div class="white_circle"></div>
+            </div>
+            <div class="arrows">
+              <div class="left"><i class="bi bi-arrow-left"></i></div>
+              <div class="right"><i class="bi bi-arrow-right-short"></i></div>
+            </div>
+          </div>
+          <!-- </div> -->
         </div>
       </div>
       <div class="line"><em class="line"></em></div>
-      <div class="container">
-        <footer class="footer">
+
+      <footer class="footer">
+        <div class="container">
           <div class="footer_1">
             <div class="footer_1_left">
               <h6>Try for free!</h6>
@@ -250,8 +248,8 @@
             <div class="footer_2_1">
               <div class="footer_2_1_1">
                 <div class="figure">
-                  <div class="smoll"></div>
-                  <div class="smoll2"></div>
+                  <div class="figure_1"></div>
+                  <div class="figure_2"></div>
                 </div>
                 <div><p>DataWarehouse</p></div>
               </div>
@@ -305,8 +303,8 @@
               <div class="icon"><i class="fa-solid fa-comment-dots"></i></div>
             </div>
           </div>
-        </footer>
-      </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
