--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
       <nav class="nav">
         <div class="container">
           <div class="nav_first">
-            <div class="figure">
-              <div class="figure_1"></div>
-              <div class="figure_2"></div>
+            <div class="nav_1">
+              <div class="figure">
+                <div class="figure_1"></div>
+                <div class="figure_2"></div>
+              </div>
+              <div class="logo"><p>DataWarehouse</p></div>
             </div>
             <div class="nav_links">
               <a href="">About</a>
@@ -95,7 +98,7 @@
           </div>
           <div class="third_cont">
             <div class="n background_1">
-              <div class="img1"></div>
+              <div class="img1">im</div>
               <div class="third_info">
                 <div><h4>Search Data</h4></div>
                 <div>
@@ -228,6 +231,7 @@
           <!-- </div> -->
         </div>
       </div>
+
       <div class="line"><em class="line"></em></div>
 
       <footer class="footer">
