--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="figure_1"></div>
                 <div class="figure_2"></div>
               </div>
-              <div class="logo"><p>DataWarehouse</p></div>
+              <div class="logo"><p>Data Warehouse</p></div>
             </div>
             <div class="nav_links">
               <a href="">About</a>
@@ -63,7 +63,9 @@
             </div>
             <div><button class="first_btn">Learn more</button></div>
           </div>
-          <div class="first_right"></div>
+          <div >
+            <img class="first_right" src="img/039cbccbb3a55ae069a3291f512521c8.png" alt="">
+          </div>
         </div>
       </div>
 
@@ -98,7 +100,7 @@
           </div>
           <div class="third_cont">
             <div class="n background_1">
-              <div class="img1">im</div>
+              <div class="img1"></div>
               <div class="third_info">
                 <div><h4>Search Data</h4></div>
                 <div>
@@ -174,10 +176,10 @@
           <div class="fourth_h"><h5>Testimonials</h5></div>
           <div class="fourth_person">
             <div class="person_1">
-              <div class="foto_1"></div>
+              <div class="foto_1 foto"></div>
               <div class="person_info">
-                <div><p>John Fang</p></div>
-                <div><a href="">wordfaang.com</a></div>
+                <div class="person_name"><p>John Fang</p></div>
+                <div class="person_web"><a href="">wordfaang.com</a></div>
                 <div>
                   <span
                     >Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
@@ -188,10 +190,10 @@
               </div>
             </div>
             <div class="person_2">
-              <div class="foto_2"></div>
+              <div class="foto_2 foto"></div>
               <div class="person_info">
-                <div><p>Jeny Doe</p></div>
-                <div><a href="">UX Engineer</a></div>
+                <div class="person_name"><p>Jeny Doe</p></div>
+                <div class="person_web"><a href="">UX Engineer</a></div>
                 <div>
                   <span>
                     Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
@@ -202,10 +204,10 @@
               <div class="person_2_shadow"></div>
             </div>
             <div class="person_3">
-              <div class="foto_3"></div>
+              <div class="foto_3 foto"></div>
               <div class="person_info">
-                <div><p>William</p></div>
-                <div><a href="">Web Designer</a></div>
+                <div class="person_name"><p>William</p></div>
+                <div class="person_web"><a href="">Web Designer</a></div>
                 <div>
                   <span>
                     Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
