first complete commit

--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
             </div>
             <div><button class="first_btn">Learn more</button></div>
           </div>
-          <div >
-            <img class="first_right" src="img/039cbccbb3a55ae069a3291f512521c8.png" alt="">
+          <div>
+            <img
+              class="first_right"
+              src="img/039cbccbb3a55ae069a3291f512521c8.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -244,10 +248,13 @@
               <p>Get limited 1 week free try our features!</p>
             </div>
             <div class="footer_1_right">
-              <button class="footer_1_btn">Learn more</button>
-              <button class="demo_btn">
-                Request Demo <i class="bi bi-arrow-right"></i>
-              </button>
+              <div><button class="first_btn">Learn more</button></div>
+              <div class="demo">
+                <a class="demo_btn">
+                  Request Demo
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
             </div>
           </div>
           <div class="footer_2">
@@ -269,7 +276,7 @@
             <div class="footer_2_2">
               <div class="footer_2_2_1"><p>About</p></div>
               <div>
-                <ul>
+                <ul class="footer_2_2_2">
                   <li class="li"><a href="">Profile</a></li>
                   <li class="li"><a href="">Features</a></li>
                   <li class="li"><a href="">Careers</a></li>
@@ -280,7 +287,7 @@
             <div class="footer_2_3">
               <div class="footer_2_3_1"><p>Help</p></div>
               <div>
-                <ul>
+                <ul class="footer_2_3_2">
                   <li class="li"><a href="">Support</a></li>
                   <li class="li"><a href="">Sign up</a></li>
                   <li class="li"><a href="">Guide</a></li>
