--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="reset.css" />
+    <link href="http://fonts.cdnfonts.com/css/warownia" rel="stylesheet" />
+    <link href="http://fonts.cdnfonts.com/css/avenir" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
       rel="stylesheet"
@@ -176,7 +178,6 @@
 
       <div class="fourth">
         <div class="container">
-          <!-- <div class="fourth_main"> -->
           <div class="fourth_h"><h5>Testimonials</h5></div>
           <div class="fourth_person">
             <div class="person_1">
@@ -234,7 +235,6 @@
               <div class="right"><i class="bi bi-arrow-right-short"></i></div>
             </div>
           </div>
-          <!-- </div> -->
         </div>
       </div>
 
